{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 111,
  "lineage": "3e10d6c1-7c58-6d17-df94-784e8fc42b49",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0318d48238515f255",
            "domain": "vpc",
            "id": "eipalloc-0a227c4f518ea2202",
            "network_border_group": "us-east-2",
            "network_interface": "eni-00a3a52beb2cf2060",
            "private_dns": "ip-172-31-55-21.us-east-2.compute.internal",
            "private_ip": "172.31.55.21",
            "public_dns": "ec2-3-130-5-61.us-east-2.compute.amazonaws.com",
            "public_ip": "3.130.5.61",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ea83ef6e494c1f2",
            "arn": "arn:aws:ec2:us-east-2:536867559799:instance/i-0865da6e4517ac12e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0865da6e4517ac12e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vm2-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-025444b21d237cde5",
            "private_dns": "ip-172-31-82-197.us-east-2.compute.internal",
            "private_ip": "172.31.82.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0803144a84983c936",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a0b15d9f06f10bde"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a493637a5f2bd1a5",
            "tags": {
              "Name": "vm2"
            },
            "tags_all": {
              "Name": "vm2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a0b15d9f06f10bde"
            ]
          },
          "dependencies": [
            "aws_key_pair.vm2-key",
            "aws_security_group.netology-sg",
            "aws_subnet.private",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "netology-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:536867559799:internet-gateway/igw-0af7378c85a2743f4",
            "id": "igw-0af7378c85a2743f4",
            "owner_id": "536867559799",
            "tags": {
              "Name": "netology-gw"
            },
            "tags_all": {
              "Name": "netology-gw"
            },
            "vpc_id": "vpc-0eb86a18e15b9054a"
          },
          "dependencies": [
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "netology-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a227c4f518ea2202",
            "connectivity_type": "public",
            "id": "nat-08012e8e167c20291",
            "network_interface_id": "eni-00a3a52beb2cf2060",
            "private_ip": "172.31.55.21",
            "public_ip": "3.130.5.61",
            "subnet_id": "subnet-0fc61aa6ea24b90c3",
            "tags": {
              "Name": "netology-nat-gw"
            },
            "tags_all": {
              "Name": "netology-nat-gw"
            }
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.netology-vpc",
            "aws_eip.nat_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:536867559799:route-table/rtb-0bd16a85d46c4a785",
            "id": "rtb-0bd16a85d46c4a785",
            "owner_id": "536867559799",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08012e8e167c20291",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route"
            },
            "tags_all": {
              "Name": "private-route"
            },
            "vpc_id": "vpc-0eb86a18e15b9054a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.netology-nat-gw",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:536867559799:route-table/rtb-023b1902ebc5a0bed",
            "id": "rtb-023b1902ebc5a0bed",
            "owner_id": "536867559799",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0af7378c85a2743f4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route"
            },
            "tags_all": {
              "Name": "public-route"
            },
            "vpc_id": "vpc-0eb86a18e15b9054a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.netology-gw",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "netology-rtassoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a522d4b2f95d236c",
            "route_table_id": "rtb-023b1902ebc5a0bed",
            "subnet_id": "subnet-0fc61aa6ea24b90c3"
          },
          "dependencies": [
            "aws_route_table.public-route",
            "aws_subnet.public",
            "aws_vpc.netology-vpc",
            "aws_internet_gateway.netology-gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "netology-rtassoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d3a64049b0bf10c",
            "route_table_id": "rtb-0bd16a85d46c4a785",
            "subnet_id": "subnet-0a493637a5f2bd1a5"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.netology-vpc",
            "aws_eip.nat_gateway",
            "aws_nat_gateway.netology-nat-gw",
            "aws_route_table.private-route",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "netology-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:536867559799:security-group/sg-0a0b15d9f06f10bde",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0b15d9f06f10bde",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "netology-sg",
            "name_prefix": "",
            "owner_id": "536867559799",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0eb86a18e15b9054a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpn_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:536867559799:security-group/sg-0eaaacc4fed3892e7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eaaacc4fed3892e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Incoming VPN connection",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpn-netology-sg",
            "name_prefix": "",
            "owner_id": "536867559799",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0eb86a18e15b9054a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": -1,
            "id": "sgrule-1717861396",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-0a0b15d9f06f10bde",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.netology-sg",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-785849744",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a0b15d9f06f10bde",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.netology-vpc",
            "aws_security_group.netology-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:536867559799:subnet/subnet-0a493637a5f2bd1a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.31.64.0/19",
            "id": "subnet-0a493637a5f2bd1a5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "536867559799",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-0eb86a18e15b9054a"
          },
          "dependencies": [
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:536867559799:subnet/subnet-0fc61aa6ea24b90c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.31.32.0/19",
            "id": "subnet-0fc61aa6ea24b90c3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "536867559799",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-0eb86a18e15b9054a"
          },
          "dependencies": [
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "netology-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:536867559799:vpc/vpc-0eb86a18e15b9054a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-09ea6a3eefcb2f7f3",
            "default_route_table_id": "rtb-0c3bbb946a10932d0",
            "default_security_group_id": "sg-03a18514627388dc4",
            "dhcp_options_id": "dopt-c1fa6baa",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0eb86a18e15b9054a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c3bbb946a10932d0",
            "owner_id": "536867559799",
            "tags": {
              "Name": "netology-vpc"
            },
            "tags_all": {
              "Name": "netology-vpc"
            }
          }
        }
      ]
    }
  ]
}